--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                                                     <td>{{actividad.ACTIVIDAD | capitalize}}
                                                     </td>
 
-                                                    <td  ng-mouseover="hoverEdit3 = true" ng-mouseleave="hoverEdit3 = false"
+                                                    <td  ng-mouseover="hoverEdit3 = actividad.listaRecursos.length" ng-mouseleave="hoverEdit3 = false"
                                                             dnd-list="actividad.listaRecursos"
                                                         dnd-allowed-types="allowedTypes1"
                                                         dnd-drop="dropRecurso(titulacion.CODTIT, curso.nombre, asignatura.CODASI, actividad.CODACT, item, type)">
@@ -115,7 +115,7 @@
                                                         </div>
                                                     </td>
 
-                                                    <td ng-mouseover="hoverEdit5 = true" ng-mouseleave="hoverEdit5 = false"
+                                                    <td ng-mouseover="hoverEdit5 = actividad.listaAulas.length" ng-mouseleave="hoverEdit5 = false"
                                                             dnd-list="actividad.listaAulas"
                                                         dnd-allowed-types="allowedTypes2"
                                                         dnd-drop="dropRecurso(titulacion.CODTIT, curso.nombre, asignatura.CODASI, actividad.CODACT, item, type)">
