--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 <div class="col-md-4 column">
                     <div sticky offset="105" id="MenuRecursos">
 
-                        <h5> Gestión de Aulas </h5>
+                        <h5> Gestión de Aulas DE VICENTE </h5>
                         <accordion close-others="oneAtATime" >
                             <accordion-group  is-open="status.open" >
                                 <accordion-heading>
