--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 <div class="col-md-4 column">
                     <div sticky offset="105" id="MenuRecursos">
 
-                        <h5> Gestión de Aulas DE VICENTE </h5>
+                        <h5> Gestión de Aulas </h5>
                         <accordion close-others="oneAtATime" >
                             <accordion-group  is-open="status.open" >
                                 <accordion-heading>
@@ -79,7 +79,7 @@
                                 </accordion-heading>
                                 <i type="btn" class="close" data-dismiss="modal" aria-label="Close" ng-click="removeByCurso(titulacion.CODTIT, curso.nombre)" ><span aria-hidden="true">&times;</span></i>
                                 <div  ng-repeat="asignatura in curso.asignaturas">
-                                        <table class="table table-bordered">
+                                        <table class="table table-bordered table-fixed">
                                                 <thead>
                                                 <tr>
                                                     <th class="tablaNombreAsignatura">{{asignatura.NOMBRE}}
