--- a/index.html
+++ b/index.html
@@ -6,7 +6,12 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/app.css" rel="stylesheet">
 </head>
-<body ng-app="requisitos_aulas" ng-controller="controllerTitulaciones as titu">
+<body ng-app="requisitos_aulas" >
+
+
+    <div ng-controller="controllerTitulaciones as titu" ng-cloak="">
+        <!-- The splash screen must be first -->
+        <span us-spinner="{radius:30, width:8, length: 16}" spinner-key="spinner-1"></span>
     <div class="row clearfix">
         <div class="col-md-12 column" >
             <div class="row clearfix">
@@ -171,9 +176,12 @@
 
 
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
+<script src="js/spin.min.js"></script>
+<script src="js/angular-spinner.min.js"></script>
 <script src="js/angular-drag-and-drop-lists.min.js"></script>
 <script src="js/ui-bootstrap-tpls-0.12.1.min.js"></script>
 <script src="js/sticky.js"></script>
 <script src="js/app.js"></script>
+</div>
 </body>
 </html>
