Lista de recursos desde DB

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                                      dnd-effect-allowed="copy"
                                      dnd-type="tipoRecursoNombre"
                                         >
-                                    {{tipoRecurso.descripcion}}
+                                    {{tipoRecurso.DESCRIP}}
                                 </div>
                             </accordion-group>
                         </accordion>
@@ -125,7 +125,7 @@
                                                              >
                                                             <i   ng-show="hoverEdit4" type="btn" class="close" data-dismiss="modal" ng-click="removeByRecurso(titulacion.CODTIT, curso.nombre, asignatura.CODASI, actividad.CODACT, true, tipoRecurso)"
                                                                aria-label="Close"><span aria-hidden="true">&times;</span></i>
-                                                            {{tipoRecurso.descripcion}}
+                                                            {{tipoRecurso.DESCRIP}}
                                                         </div>
                                                     </td>
 
