--- a/index.html
+++ b/index.html
@@ -9,13 +9,9 @@
 <body ng-app="requisitos_aulas" >
 
 
-    <div ng-controller="controllerTitulaciones as titu" ng-cloak="">
-        <!-- The splash screen must be first -->
-    <div class="row clearfix">
-        <div class="col-md-12 column" >
-            <div class="row clearfix">
-                <div class="col-md-4 column">
-                    <div sticky offset="105" id="MenuRecursos">
+    <div ng-controller="controllerTitulaciones as titu" ng-cloak="" class="main">
+        <div class="col-md-4 column" id="izquierda">
+                    <div id="MenuRecursos">
 
                         <h5> Gestión de Aulas </h5>
                         <accordion close-others="oneAtATime" >
@@ -72,7 +68,7 @@
 
                     </div>
                 </div>
-                <div class="col-md-8 column">
+                <div class="col-md-8 column" id="derecha">
                     <div>
                       <tabset type="pills">
                         <tab ng-repeat="titulacion in titulaciones" heading="{{titulacion.CODTIT}}" active="tab.active" disabled="tab.disabled">
@@ -167,9 +163,7 @@
                         </tab>
                       </tabset>
                     </div>
-                </div>
-            </div>
-        </div>
+
     </div>
 
 
@@ -181,7 +175,6 @@
 <script src="js/angular-spinner.min.js"></script>
 <script src="js/angular-drag-and-drop-lists.min.js"></script>
 <script src="js/ui-bootstrap-tpls-0.12.1.min.js"></script>
-<script src="js/sticky.js"></script>
 <script src="js/app.js"></script>
 </div>
 </body>
