--- a/index.html
+++ b/index.html
@@ -6,16 +6,17 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/app.css" rel="stylesheet">
 </head>
-<body ng-app="requisitos_aulas" style="margin-left:25px;">
+<body ng-app="requisitos_aulas" style="margin-left:25px; padding-bottom:30px">
 
-    <div class="row ">
-        <div class="col-sm-2">
-            <img src="img/ua.jpg" alt="Universidad de Alicante" style="margin: 10px;">
-        </div>
-    </div>
+
 
     <div ng-controller="controllerTitulaciones as titu" ng-cloak="" class="main">
         <div class="col-md-4 column" id="izquierda">
+            <div class="row ">
+                <div class="col-sm-2">
+                    <img src="img/ua.jpg" alt="Universidad de Alicante" style="margin: 10px;">
+                </div>
+            </div>
                     <div id="MenuRecursos">
 
                         <h5> Gestión de Aulas </h5>
